Download Resume Button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+  
 </head>
 
 <body>
@@ -139,14 +140,24 @@
             </a>
           </li>
 
-          <li class="social-item">
+          <!-- <li class="social-item">
             <a href="./MY RESUME/GauTam_Kumar_Resume.pdf" download="Gautam-Kumar-Resume" class="social-link" target="_blank">
-              <!-- Resume -->
+               
               <ion-icon name="document-outline"></ion-icon>
             </a>
-          </li>
+          </li> -->
+
+
 
         </ul>
+          <!-- Resume BUtton -->
+
+          <button class="btn">
+        
+            <a href="./MY RESUME/GauTam_Kumar_Resume.pdf" download="Gautam-Kumar-Resume" class="social-link" target="_blank">
+              <span class="text">Download Resume</span>
+            </a>
+        </button>
 
       </div>
 
